--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "boxicons": "2.1.4",
     "next": "14.1.2",
     "react": "^18",
