--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "boxicons": "2.1.4",
-    "next": "14.1.2",
+    "next": "^14.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
